New icon.  Editor works, except for dates.